--- a/Gateway/gateway/src/main/resources/application.yml
+++ b/Gateway/gateway/src/main/resources/application.yml
@@ -63,9 +63,13 @@ app:
   realm: DigitalMedia
 
 eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+    enabled: true
 
 management:
   info:
