--- a/movies-api-base (2)/movies-api/src/main/resources/application.yml
+++ b/movies-api-base (2)/movies-api/src/main/resources/application.yml
@@ -55,9 +55,13 @@ springdoc:
 
 
 eureka:
+  instance:
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+    enabled: true
 
 info:
   app:
